@@ -51,6 +51,12 @@
             <artifactId>jaxb-api</artifactId>
             <version>2.3.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
+            <version>2.3.1</version>
+        </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -73,7 +79,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
+                <configuration><compilerArgs><arg>--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg><arg>--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg><arg>--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg><arg>--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg><arg>--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg><arg>--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg><arg>--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg><arg>--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg><arg>--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg><arg>--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED</arg></compilerArgs>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.projectlombok</groupId>
